--- a/Wine Quality.ipynb
+++ b/Wine Quality.ipynb
@@ -9,20 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "83a3db44-e5f7-4be6-9190-e8e4f2b3d60a",
-   "metadata": {},
-   "source": [
-    "### Visualization\n",
-    "\n",
-    "- Create correlation heatmaps to identify relationships between features.\n",
-    "\n",
-    "- Plot feature distributions to understand their individual characteristics.\n",
-    "\n",
-    "- Visualize class distributions and compare them before and after applying SMOTE."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2ebc29cf-07a9-48da-8f51-b982a67e3f86",
@@ -267,17 +253,10 @@
    "source": [
     "### Future Work\n",
     "\n",
-    "Model Building: Develop and compare various machine learning models, including:\n",
-    "\n",
-    "- Logistic Regression\n",
-    "- Random Forest\n",
-    "- XGBoost\n",
-    "\n",
-    "Hyperparameter Tuning: Perform hyperparameter optimization to enhance model performance.\n",
-    "\n",
-    "Feature Selection: Experiment with feature selection techniques to identify the most influential features.\n",
-    "\n",
-    "Advanced Evaluation: Use metrics such as accuracy, precision, recall, F1-score, and ROC-AUC to evaluate the classification models."
+    "- Model Building: Develop and compare various machine learning models, including: Logistic Regression, Random Forest, XGBoost\n",
+    "- Hyperparameter Tuning: Perform hyperparameter optimization to enhance model performance.\n",
+    "- Feature Selection: Experiment with feature selection techniques to identify the most influential features.\n",
+    "- Advanced Evaluation: Use metrics such as accuracy, precision, recall, F1-score, and ROC-AUC to evaluate the classification models."
    ]
   }
  ],
