--- a/Wine Quality.ipynb
+++ b/Wine Quality.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9486c3ee-792d-4291-a761-589169f483d5",
+   "metadata": {},
+   "source": [
+    "### Step 1: Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2ebc29cf-07a9-48da-8f51-b982a67e3f86",
@@ -25,6 +33,14 @@
     "from imblearn.over_sampling import SMOTE\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb9fea2f-1198-430a-b0b7-1aa3951b7d07",
+   "metadata": {},
+   "source": [
+    "### Step 2: Read Data"
    ]
   },
   {
@@ -142,6 +158,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07c33e36-a145-47ad-998c-21789a12071b",
+   "metadata": {},
+   "source": [
+    "### Step 3: Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "6a5ef848-26b8-43da-b919-a39e0a0c2126",
@@ -157,8 +181,6 @@
     }
    ],
    "source": [
-    "# Data Preprocessing\n",
-    "\n",
     "# Define the features (X) and target (y)\n",
     "X = df_imputed.drop(['quality', 'Id'], axis=1)  # Drop 'quality' and 'Id' columns\n",
     "y = df_imputed['quality']  # Target column (quality of the wine)\n",
